Fix links not showing on .panel-heading

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,9 @@
 @import "slides";
 
 body { padding-top: 85px; }
+
+div.panel-heading {
+  a {
+    color: inherit;
+  }
+}
